--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,10 +10,16 @@ header{
 	height: 100vh;
 }
 .navbar{
-	background-color: transparent;
+	background-color: black;
 	border: none;
 	height: 60px;
 	padding-top: 10px;
+	width: 100%;
+	position: fixed;
+	z-index: 100;
+}
+.nav-bar.link{
+	right: 10px;
 }
 .navbar-default .navbar-nav>li>a{
 	color: white;
@@ -42,7 +48,7 @@ header{
 .home-box h1{
 	font-size: 5.2em;
 }
-.home-box button{
+.home-box button, .contact-box button{
 	color: white;
 	font-weight: bolder;
 	font-size: 1.5em;
@@ -53,14 +59,14 @@ header{
 	border-radius: 5px;
 }
 /*SERVICES*/
-.service-tittle, .portfolio-tittle{
+.service-tittle, .portfolio-tittle, .about-tittle, .team-tittle, .contact-tittle{
 	margin-top: 100px;
 }
-.service-tittle h2, .portfolio-tittle h2{
+.service-tittle h2, .portfolio-tittle h2, .about-tittle h2, .team-tittle h2, .contact-tittle h2{
 	font-weight: bolder;
 	font-size: 2.8em;
 }
-.service-tittle h4, .portfolio-tittle h4, .portfolio-box p{
+.service-tittle h4, .portfolio-tittle h4, .portfolio-box p, .about-tittle h4, .team-tittle h4, .contact-tittle h4{
 	font-style: italic;
 	color: #848484;
 	margin: 30px;
@@ -83,14 +89,14 @@ header{
 	color: #848484;
 }
 /*PORTFOLIO*/
-.portfolio{
+.portfolio, .team{
 	background-color: #D8D8D8;
 	width: 100%;
-	padding: 20px;
+	padding: 20px 20px 150px 20px;
 
 }
 .portfolio-box img{
-	height: 50vh;
+	height: 40vh;
 	width: 100%;
 }
 .portfolio-box p, .portfolio-box h6{
@@ -104,4 +110,100 @@ header{
 }
 .portfolio-box p{
 margin-bottom: 30px;
+}
+/*ABOUT*/
+.left{
+	text-align: left;
+}
+.right{
+	text-align: right;
+}
+.about-box img{
+	border-radius: 100%;
+	padding: 10px;
+	background-color: #E6E6E6;
+	width: 50%;
+}
+.about-box{
+	margin-bottom: 30px;
+}
+.about-box h2, .about-box h4, .about-box button, .team-box h2{
+	font-family: 'Fjalla One', sans-serif;
+	font-size: 1.3em;
+	font-weight: bolder;
+}
+.about-box p, .team-box h4, .team-box p{
+	color: #848484;
+}
+.about-box button{
+	background-color: #FACC2E;
+	height: 170px;
+	width: 170px;
+	border-radius: 100%;
+	border: 10px solid #E6E6E6;
+	color: white;	
+	margin-bottom: 80px;
+}
+/*TEAM*/
+.team-box{
+	margin: 30px 0;
+}
+.team-box img{
+	border-radius: 100%;
+	border: 10px solid white;
+}
+.team-box button, .footer-box button{
+	background-color: black;
+	width: 50px;
+	height: 50px;
+	border-radius: 100%;
+	border: none;
+	margin-bottom: 50px;
+}
+.team-box i, .footer-box i{
+	color: white;
+
+}
+.team-box p{
+	padding: 0 150px;
+}
+.banner{
+	background-color: white;
+	padding: 40px 0;
+}
+/*CONTACT*/
+.bg-contact{
+	background: url('../img/map-image.png');
+	background-size: cover;
+	height: 100vh;
+}
+.contact{
+	background-color: black;
+	height: 100vh;
+}
+.contact-tittle h2{
+	color: white;
+}
+.contact-box input, .contact-box textarea{
+	width: 90%;
+	margin: 20px;
+	padding: 10px;
+}
+.contact-box input{
+	height: 48px;
+	border-radius: 7px;
+}
+/*FOOTER*/
+.footer-box button{
+	margin-bottom: 0;
+}
+.footer-box{
+	padding: 20px 0;
+}
+.footer-box a, .footer-box p{
+	display: inline-block;
+	padding-top: 20px;
+}
+.footer-box a{
+	color: #FFBF00;
 }
