corriegiendo hover en links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ header{
 	margin-right: 20px;
 }
 .navbar-default .navbar-nav>li>a:hover{
-	color: #FFBF00;
+	color: #F2F5A9
 }
 .navbar-default .navbar-brand{
 	color: #FFBF00;
